# Jarvis-Tauri

./: .gitignore  activate_jarvis.sh  initial_interactions.jsonl  install.sh  jarvis.scpt  jarvis_test_doc.md  test_wmata.py
jarvis/: .env  .env.example  QUICKSTART.md  README.md  debug_email.py  main.py  pyproject.toml  start_ui.sh  verify_calendar_traffic.py  verify_connectors.py  verify_openflights.py  verify_radar.py
jarvis-app/src-tauri/: Cargo.toml  tauri.conf.json
jarvis-app/src-tauri/.cargo/: config.toml
jarvis-app/src-tauri/gtfs_data/wmata-rail/: calendar_dates.txt  feed_info.txt  pathways.txt  routes.txt  stops.txt  trips.txt
jarvis-app/src-tauri/src/: external.rs  feed_manager.rs  gtfs.rs  gtfs_rt.rs  lib.rs  llm.rs  llm_note.md  main.rs  memory.rs  sensor.rs
jarvis/config/: models.yaml  system_prompt.txt
jarvis/jarvis/: __init__.py  cli.py
jarvis/jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jarvis/jarvis/agents/: __init__.py  action_queue.py  agent_base.py  calendar_agent.py  coordinator.py  email_agent.py  flight_agent.py  transport_agent.py  trip_agent.py  weather_agent.py
jarvis/jarvis/agents/connectors/: __init__.py  amtrak_connector.py  bikeshare_connector.py  connector_base.py  flight_connector.py  gmail_connector.py  hotel_connector.py  maps_connector.py  marc_connector.py  outlook_connector.py  vre_connector.py  weather_connector.py  wmata_connector.py
jarvis/jarvis/agents/utils/: flight_data_manager.py
jarvis/jarvis/core/: __init__.py  config.py  interaction_store.py  llm_engine.py  memory_store.py  orchestrator.py  stt_engine.py  system_stats.py  tts_engine.py  vision_engine.py
jarvis/jarvis/integrations/: __init__.py  base.py  calendar_module.py  imessage.py  memory_module.py  tasks_module.py
jarvis/jarvis/providers/: __init__.py
jarvis/jarvis/providers/llm/: __init__.py  ollama_provider.py
jarvis/jarvis/providers/stt/: __init__.py  whisper_provider.py
jarvis/jarvis/training/: __init__.py  document_processor.py  modelfile_generator.py  qa_generator.py  training_pipeline.py
jarvis/jarvis/ui/: __init__.py  app.py  components.py
jarvis/jarvis/voice/: __init__.py  audio_io.py  voice_loop.py  wake_word.py
(+28 files in other folders)
